ledger: be fussier about the types of validator scripts
Now that validator scripts all have the same type, we can insist that
you only make a `ValidatorScript` from something that has that type.

This has some knock-on effects: we need to use `CompiledCode` instead of
`Script`, since only the former still has the type around.

However, I think this is good. `CompiledCode` is more type-safe, and we had a bit
of a problem where there were two ways to do things: with
`CompiledCode`, or with `Script`. Now there is only one.

Annoyance: need some circular imports to see `PendingTx` in
`Ledger.Scripts`. I think this is fine for now - the dependency is real,
conceptually. We can reorg later.

(Also, I really need to reduce the duplication in the book, it's killing
me.)

--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -61,9 +61,9 @@ adminRedeemer :: RedeemerScript
 adminRedeemer = RedeemerScript $ toData ()
 
 mkAdminValidator :: Admin -> ValidatorScript
-mkAdminValidator = ValidatorScript
-                       . applyScript $$(compileScript [|| \a -> wrapValidator (validateAdmin a) ||])
-                       . lifted
+mkAdminValidator = mkValidatorScript
+                       . applyCode $$(compile [|| \a -> wrapValidator (validateAdmin a) ||])
+                       . liftCode
 
 adminAddress :: Admin -> Address
 adminAddress = scriptAddress . mkAdminValidator
@@ -124,9 +124,9 @@ mkNonFungibleRedeemer :: String -> RedeemerScript
 mkNonFungibleRedeemer name = RedeemerScript $ toData $ TokenName $ C.pack name
 
 mkNonFungibleValidator :: NonFungible -> ValidatorScript
-mkNonFungibleValidator = ValidatorScript
-                       . applyScript $$(compileScript [|| \nf -> wrapValidator (validateNonFungible nf) ||])
-                       . lifted
+mkNonFungibleValidator = mkValidatorScript
+                       . applyCode $$(compile [|| \nf -> wrapValidator (validateNonFungible nf) ||])
+                       . liftCode
 
 nonFungibleAddress :: NonFungible -> Address
 nonFungibleAddress = scriptAddress . mkNonFungibleValidator
@@ -550,7 +550,7 @@ eaStateMachine ea = StateMachine
     }
 
 mkEAValidator :: EnglishAuction -> ValidatorScript
-mkEAValidator ea = ValidatorScript $ $$(compileScript [|| v ||]) `applyScript` lifted ea
+mkEAValidator ea = mkValidatorScript $ $$(compile [|| v ||]) `applyCode` liftCode ea
     where v ea' = wrapValidator (mkValidator (eaStateMachine ea'))
 
 eaAddress :: EnglishAuction -> Address
