--- a/marlowe-tutorial/doc/migrating.adoc
+++ b/marlowe-tutorial/doc/migrating.adoc
@@ -1,4 +1,4 @@
-[#marlowe-data]
+[#migrating]
 == Migrating to Marlowe 3.0
 
 This tutorial explains how Marlowe 3.0 differs from earlier versions of the language, versions 1.3 and 2.0. 
