Added links to migrating.

--- a/marlowe-tutorial/doc/index.adoc
+++ b/marlowe-tutorial/doc/index.adoc
@@ -38,4 +38,5 @@ include::using-marlowe.adoc[leveloffset=+1]
 include::playground-overview.adoc[leveloffset=+1]
 include::static-analysis.adoc[leveloffset=+1]
 include::actus-marlowe.adoc[leveloffset=+1]
+include::migrating.adoc[leveloffset=+1]
 // include::marlowe-plutus.adoc[leveloffset=+1]
