--- a/marlowe-tutorial/doc/overview.adoc
+++ b/marlowe-tutorial/doc/overview.adoc
@@ -43,7 +43,8 @@ of the inputs that it receives. This tutoiral explains this, and how to run an a
 . xref:actus-marlowe#actus-marlowe[]
 This tutorial gives an introduction to the general idea of the ACTUS
 taxonomy, plus examples implemented in Marlowe.
-
+. xref:migrating#migrating[]
+Here we explain how the current version of Marlowe is related to earlier versions, in particular version 1.3 and 2.0.
 // . xref:escrow-step-by-step#escrow-step-by-step[] Escrow step by step NOT YET UPDATED
 // On this tutorial we build the escrow contract step by step. From a single contract with a single actor (Alice) to multiple actors (Alice,Bob,Carol) and multiple interactions. /This was the script for the example in the udemy class/.
 
